--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ header {
     padding: 20px;
     margin-bottom: 20px;
 }
+
+footer {
+    color: palevioletred;
+    text-align: center;
+    padding: 10px;
+    margin-top: 600px;
+}
